--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.6
-  flutter_riverpod: ^2.3.6
-  intl: ^0.18.1
-  slide_to_act: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.4
+  path_provider: ^2.0.14
+  http: ^0.13.6
+  flutter_riverpod: ^2.3.6
+  intl: ^0.18.1
+  slide_to_act: any
+  path: ^1.8.2
+  sqflite: ^2.2.8+1
 
 dev_dependencies:
   flutter_test:
