--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   slide_to_act: any
   path: ^1.8.2
   sqflite: ^2.2.8+1
+  datetime_picker_formfield_new: ^2.1.0
 
 dev_dependencies:
   flutter_test:
